# cubemaster

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: base.yaml  mlp.yaml  mlp_optimized.yaml  mobilenet.yaml  shallow_cnn.yaml  shallow_cnn_optimized.yaml
configs/sweeps/: mlp_sweep.yaml  mobilenet_sweep.yaml  shallow_cnn_sweep.yaml
models/mlp/: history.json
models/mobilenet/: history.json
models/shallow_cnn/: best.onnx  history.json
notebooks/: colab_training.ipynb
results/mlp/: test_evaluation.json
results/mobilenet/: test_evaluation.json
results/shallow_cnn/: test_evaluation.json
scripts/: compare_models.py  evaluate_model.py  export_to_onnx.py  prepare_dataset.py  run_sweep.py  train.py
src/cubemaster/: __init__.py
src/cubemaster/evaluation/: metrics.py
src/cubemaster/models/: __init__.py  base.py  mlp.py  mobilenet.py  shallow_cnn.py
src/cubemaster/training/: __init__.py  augmentations.py  dataset.py  trainer.py
src/cubemaster/utils/: config.py
src/cubemaster/visualization/: __init__.py  plots.py
